--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="./image/bomb_icon.png" type="image/png">
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/styles.css">
-        <title>Index</title>
+        <title>Сапёр</title>
     </head>
     <body>
         <!-- Wrapper start -->
